ref to new Bootstrap version (for now from a CDN network, can substitute the file when all the examples are checked) for three examples

--- a/web-src/examples/adjustable-threshold.html
+++ b/web-src/examples/adjustable-threshold.html
@@ -4,7 +4,12 @@
     <title>dc.js - Adjustable Threshold Example</title>
     <link type="text/css" rel="stylesheet" href="../css/dc.css" />
     <link type="text/css" rel="stylesheet" href="../css/dc-floatleft.css" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
     <script type="text/javascript" src="../js/d3.js"></script>
     <script type="text/javascript" src="../js/crossfilter.js"></script>
     <script type="text/javascript" src="../js/dc.js"></script>
@@ -35,6 +40,7 @@
       <div id="dc-coreAcc-piechart"></div>
       <div id="dc-score-barchart"></div>
 
+      <script type="text/javascript" src="header.js"></script>
       <script type="text/javascript">
         const chartGroup = new dc.ChartGroup();
         const data = [
