Update examples to use the new Bootstrap version.

--- a/web-src/examples/color-swatch.html
+++ b/web-src/examples/color-swatch.html
@@ -3,14 +3,20 @@
   <head>
     <title>dc.js - Color Swatch Example</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
   </head>
   <body>
     <div class="container">
       <div id="header"></div>
 
-      <p style="clear: left;">
+      <p style="clear: left">
         Example of creating a simple external chart and attaching it to the
         dc.js chart registry.
       </p>
