--- a/web-src/examples/text-filter-widget.html
+++ b/web-src/examples/text-filter-widget.html
@@ -3,7 +3,13 @@
   <head>
     <title>dc.js - Text Filter Example</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
   </head>
   <body>
@@ -11,7 +17,7 @@
       <div id="header"></div>
 
       <div id="search"></div>
-      <div style="clear: both;">
+      <div style="clear: both">
         <table class="table dc-data-grid">
           <thead>
             <tr class="header">
