--- a/web-src/examples/background-drawing.html
+++ b/web-src/examples/background-drawing.html
@@ -3,7 +3,8 @@
   <head>
     <title>dc.js - Background Drawing Example</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"/>
+    <!--<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />-->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
   </head>
   <body>
@@ -24,7 +25,7 @@ Prec,Recall,System
       <script type="text/javascript" src="header.js"></script>
       <script type="text/javascript" src="../js/d3.js"></script>
       <script type="text/javascript" src="../js/crossfilter.js"></script>
-      <script type="text/javascript" src="../js/dc.js"></script>
+      <script type="text/javascript" src="../js/dc-compat.js"></script>
       <script type="text/javascript">
         //helper functions
         function safeDivision(numerator, denominator) {
