--- a/web-src/examples/boxplot-enhanced.html
+++ b/web-src/examples/boxplot-enhanced.html
@@ -3,7 +3,8 @@
   <head>
     <title>dc.js - Enhanced Box Plot Example</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
+    <!--<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />-->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <link type="text/css" rel="stylesheet" href="../css/dc-floatleft.css" />
   </head>
@@ -27,16 +28,17 @@
       </div>
       <hr style="margin: 5px;" />
       <div class="row">
-        <div class="col-md-4" id="boxPlot01" style="text-align: center;">
+        <div class="col-md-6" id="boxPlot01" style="text-align: center;">
           <h6><u>Basic</u></h6>
         </div>
-        <div class="col-md-4" id="boxPlot02" style="text-align: center;">
+        <div class="col-md-6" id="boxPlot02" style="text-align: center;">
           <h6><u>Enhanced</u></h6>
         </div>
       </div>
+      <div class="w-100"></div>
       <div class="row">
-        <div class="col-md-4" id="boxPlot03" style="text-align: center;"></div>
-        <div class="col-md-4" id="boxPlot04" style="text-align: center;"></div>
+        <div class="col-md-6" id="boxPlot03" style="text-align: center;"></div>
+        <div class="col-md-6" id="boxPlot04" style="text-align: center;"></div>
       </div>
       <hr style="margin: 5px;" />
       <div>
