--- a/web-src/examples/boxplot-render-data.html
+++ b/web-src/examples/boxplot-render-data.html
@@ -3,7 +3,14 @@
   <head>
     <title>dc.js - Box Plot Rendering Data Points</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <link type="text/css" rel="stylesheet" href="../css/dc-floatleft.css" />
   </head>
@@ -11,13 +18,13 @@
     <div class="container">
       <div id="header"></div>
       <div class="row">
-        <div class="col-md-4" id="boxPlot01" style="text-align: center;">
+        <div class="col-md-4" id="boxPlot01" style="text-align: center">
           <h6>dataOpacity = 1<br />dataWidthPortion = 0.9</h6>
         </div>
-        <div class="col-md-4" id="boxPlot02" style="text-align: center;">
+        <div class="col-md-4" id="boxPlot02" style="text-align: center">
           <h6>dataOpacity = 0.5<br />dataWidthPortion = 0.5</h6>
         </div>
-        <div class="col-md-4" id="boxPlot03" style="text-align: center;">
+        <div class="col-md-4" id="boxPlot03" style="text-align: center">
           <h6>dataOpacity = 0.4<br />dataWidthPortion = 0.1</h6>
         </div>
       </div>
