--- a/web-src/examples/complex-reduce.html
+++ b/web-src/examples/complex-reduce.html
@@ -3,7 +3,13 @@
   <head>
     <title>dc.js - Complex Reductions Example</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <link type="text/css" rel="stylesheet" href="../css/dc-floatleft.css" />
     <style>
@@ -52,14 +58,14 @@
       </div>
       <div id="test-run">
         <h4>Run</h4>
-        <div class="reset" style="visibility: hidden;">
+        <div class="reset" style="visibility: hidden">
           selected: <span class="filter"></span>
           <a href="javascript:runChart.filterAll();dc.redrawAll();">reset</a>
         </div>
       </div>
       <div id="test-expt">
         <h4>Experiment</h4>
-        <div class="reset" style="visibility: hidden;">
+        <div class="reset" style="visibility: hidden">
           selected: <span class="filter"></span>
           <a href="javascript:exptChart.filterAll();dc.redrawAll();">reset</a>
         </div>
