--- a/web-src/examples/composite-bar-line.html
+++ b/web-src/examples/composite-bar-line.html
@@ -3,7 +3,13 @@
   <head>
     <title>dc.js - Composite of a Bar and a Line Chart</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <style>
       circle.dot {
@@ -60,6 +66,9 @@
               })
               .configure({
                 renderHorizontalGridLines: true,
+              })
+              .configure({
+                brushOn: false,
               })
               .x(d3.scaleLinear().domain([2.9, 16.1]))
               .yAxisLabel('The Y Axis')
