--- a/web-src/examples/composite-brush-multi-dim.html
+++ b/web-src/examples/composite-brush-multi-dim.html
@@ -3,7 +3,13 @@
   <head>
     <title>dc.js - Composite Chart Brushing Example</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <link type="text/css" rel="stylesheet" href="../css/dc-floatleft.css" />
   </head>
@@ -13,7 +19,7 @@
 
       <p>
         Usually sub charts of a composite chart share the dimension of the
-        parent. However sometimes, especially when scatter plots are composed,
+        parent. However, sometimes, especially when scatter plots are composed,
         the sub charts may use different dimensions. This example uses two
         scatter plots both using array dimensions. Typically scatter plots use
         two dimensional brushing (see
@@ -31,7 +37,7 @@
         each observes the filter applied to the others.
       </p>
       <div id="test1"></div>
-      <div id="test2" class="table table-hover" style="width: auto;"></div>
+      <div id="test2" class="table table-hover" style="width: auto"></div>
 
       <script type="text/javascript" src="header.js"></script>
       <script type="text/javascript" src="../js/d3.js"></script>
@@ -85,6 +91,21 @@
           .yAxisLabel('y')
           .xAxisLabel('x')
           .compose([
+            new dc.BarChart(chart, chartGroup)
+              .dataProvider(
+                new dc.CFMultiAdapter({
+                  dimension: dimX,
+                  valueAccessor: d => d.value * 3,
+                  layers: [
+                    {
+                      group: groupX,
+                    },
+                  ],
+                })
+              )
+              .ordinalColors(['#e7e4ff'])
+              .barPadding(8),
+
             new dc.ScatterPlot(chart, chartGroup)
               .dataProvider(
                 new dc.CFSimpleAdapter({
@@ -113,20 +134,6 @@
               })
               .symbol(d3.symbolSquare)
               .ordinalColors(['green']),
-            new dc.BarChart(chart, chartGroup)
-              .dataProvider(
-                new dc.CFMultiAdapter({
-                  dimension: dimX,
-                  valueAccessor: d => d.value * 3,
-                  layers: [
-                    {
-                      group: groupX,
-                    },
-                  ],
-                })
-              )
-              .ordinalColors(['#e7e4ff'])
-              .barPadding(8),
           ]);
 
         dataTable
