--- a/web-src/examples/composite.html
+++ b/web-src/examples/composite.html
@@ -3,7 +3,13 @@
   <head>
     <title>dc.js - Composite Chart Example</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
   </head>
   <body>
@@ -68,9 +74,6 @@
                       ],
                     })
                   )
-                  .configure({
-                    brushOn: false,
-                  })
                   .colorScale(() => 'red')
                   .dashStyle([2, 2]),
                 new dc.LineChart(composite, chartGroup)
@@ -88,6 +91,10 @@
                   .colorScale(() => 'blue')
                   .dashStyle([5, 5]),
               ])
+              .configure({
+                brushOn: false,
+              })
+
               .render();
           }
         );
