--- a/web-src/examples/current-filters.html
+++ b/web-src/examples/current-filters.html
@@ -5,7 +5,13 @@
 
     <meta charset="UTF-8" />
 
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <link rel="icon" type="image/x-icon" href="../dc.logo.png" />
 
@@ -100,7 +106,7 @@
           <a
             class="reset"
             href="javascript:yearlyBubbleChart.filterAll();chartGroup.redrawAll();"
-            style="display: none;"
+            style="display: none"
             >reset</a
           >
 
@@ -109,51 +115,51 @@
       </div>
 
       <div class="row">
-        <div id="gain-loss-chart">
+        <div id="gain-loss-chart" class="col-sm-2">
           <strong>Days by Gain/Loss</strong>
           <a
             class="reset"
             href="javascript:gainOrLossChart.filterAll();chartGroup.redrawAll();"
-            style="display: none;"
+            style="display: none"
             >reset</a
           >
 
           <div class="clearfix"></div>
         </div>
 
-        <div id="quarter-chart">
+        <div id="quarter-chart" class="col-sm-2">
           <strong>Quarters</strong>
           <a
             class="reset"
             href="javascript:quarterChart.filterAll();chartGroup.redrawAll();"
-            style="display: none;"
+            style="display: none"
             >reset</a
           >
 
           <div class="clearfix"></div>
         </div>
 
-        <div id="day-of-week-chart">
+        <div id="day-of-week-chart" class="col-sm-2">
           <strong>Day of Week</strong>
           <a
             class="reset"
             href="javascript:dayOfWeekChart.filterAll();chartGroup.redrawAll();"
-            style="display: none;"
+            style="display: none"
             >reset</a
           >
 
           <div class="clearfix"></div>
         </div>
 
-        <div id="fluctuation-chart">
+        <div id="fluctuation-chart" class="col-sm-4">
           <strong>Days by Fluctuation(%)</strong>
-          <span class="reset" style="display: none;"
+          <span class="reset" style="display: none"
             >range: <span class="filter"></span
           ></span>
           <a
             class="reset"
             href="javascript:fluctuationChart.filterAll();chartGroup.redrawAll();"
-            style="display: none;"
+            style="display: none"
             >reset</a
           >
 
@@ -164,13 +170,13 @@
       <div class="row">
         <div id="monthly-move-chart">
           <strong>Monthly Index Abs Move & Volume/500,000 Chart</strong>
-          <span class="reset" style="display: none;"
+          <span class="reset" style="display: none"
             >range: <span class="filter"></span
           ></span>
           <a
             class="reset"
             href="javascript:moveChart.filterAll();volumeChart.filterAll();chartGroup.redrawAll();"
-            style="display: none;"
+            style="display: none"
             >reset</a
           >
 
@@ -180,7 +186,7 @@
 
       <div class="row">
         <div id="monthly-volume-chart"></div>
-        <p class="muted pull-right" style="margin-right: 15px;">
+        <p class="muted pull-right" style="margin-right: 15px">
           select a time range to zoom in
         </p>
       </div>
