--- a/web-src/examples/filter-stacks.html
+++ b/web-src/examples/filter-stacks.html
@@ -3,7 +3,13 @@
   <head>
     <title>dc.js - Filtering a Stacked Chart</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <link type="text/css" rel="stylesheet" href="../css/dc-floatleft.css" />
     <style>
@@ -19,7 +25,7 @@
     <div class="container">
       <div id="header"></div>
       <div id="test">
-        <div class="reset" style="visibility: hidden;">
+        <div class="reset" style="visibility: hidden">
           selected: <span class="filter"></span>
           <a href="javascript:chart.filterAll();chartGroup.redrawAll();"
             >reset</a
@@ -27,7 +33,7 @@
         </div>
       </div>
       <div id="pie">
-        <div class="reset" style="visibility: hidden;">
+        <div class="reset" style="visibility: hidden">
           range: <span class="filter"></span>
           <a href="javascript:pie.filterAll();chartGroup.redrawAll();">reset</a>
         </div>
