--- a/web-src/examples/filtering.html
+++ b/web-src/examples/filtering.html
@@ -3,23 +3,29 @@
   <head>
     <title>dc.js - Filtering Example</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <link type="text/css" rel="stylesheet" href="../css/dc-floatleft.css" />
   </head>
   <body>
     <div class="container">
       <div id="header"></div>
-      <div id="chart-ring-year" style="width: 300px; height: 300px;">
-        <div class="reset" style="visibility: hidden;">
+      <div id="chart-ring-year" style="width: 300px; height: 300px">
+        <div class="reset" style="visibility: hidden">
           selected: <span class="filter"></span>
           <a href="javascript:yearRingChart.filterAll();chartGroup.redrawAll();"
             >reset</a
           >
         </div>
       </div>
-      <div id="chart-hist-spend" style="width: 300px; height: 300px;">
-        <div class="reset" style="visibility: hidden;">
+      <div id="chart-hist-spend" style="width: 300px; height: 300px">
+        <div class="reset" style="visibility: hidden">
           range: <span class="filter"></span>
           <a
             href="javascript:spendHistChart.filterAll();chartGroup.redrawAll();"
@@ -28,7 +34,7 @@
         </div>
       </div>
       <div id="chart-row-spenders">
-        <div class="reset" style="visibility: hidden;">
+        <div class="reset" style="visibility: hidden">
           selected: <span class="filter"></span>
           <a
             href="javascript:spenderRowChart.filterAll();chartGroup.redrawAll();"
@@ -112,6 +118,7 @@
             })
           )
           .configure({
+            width: 300,
             elasticX: true,
             controlsUseVisibility: true,
           });
