--- a/web-src/examples/html-legend.html
+++ b/web-src/examples/html-legend.html
@@ -3,7 +3,13 @@
   <head>
     <title>dc.js - HTML Legend Example</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <link type="text/css" rel="stylesheet" href="../css/dc-floatleft.css" />
   </head>
@@ -15,11 +21,11 @@
         This page demonstrates the usage of the html legend. It shows example of
         scrollbars for the vertical menu and setting up a horizontal menu.
       </p>
-      <p style="padding-bottom: 20px;">
+      <p style="padding-bottom: 20px">
         It also shows the selected legend highlighted
       </p>
 
-      <div style="width: 250px; height: 150px; display: inline-block;">
+      <div style="width: 250px; height: 150px; display: inline-block">
         <div id="year"></div>
         <div id="year-legend" class="dc-html-legend-container"></div>
       </div>
