--- a/web-src/examples/number.html
+++ b/web-src/examples/number.html
@@ -3,7 +3,13 @@
   <head>
     <title>dc.js - Number Display Example</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <style>
       #number-box {
@@ -13,7 +19,7 @@
         text-align: center;
         padding-top: 63px;
         padding-bottom: 63px;
-        height: 74px;
+        height: 200px;
         line-height: normal;
       }
     </style>
@@ -21,7 +27,7 @@
   <body>
     <div class="container">
       <div id="header"></div>
-      <div id="test" style="float: none;">
+      <div id="test" style="float: none">
         Inline Number Display. We have
         <span class="number-display"></span> jumping on the bed.
       </div>
@@ -82,12 +88,9 @@
               })
             )
             .html({
-              one:
-                '<span style="color:steelblue; font-size: 26px;">%number</span> Monkey',
-              some:
-                '<span style="color:steelblue; font-size: 26px;">%number</span> Total Monkeys',
-              none:
-                '<span style="color:steelblue; font-size: 26px;">No</span> Monkeys',
+              one: '<span style="color:steelblue; font-size: 26px;">%number</span> Monkey',
+              some: '<span style="color:steelblue; font-size: 26px;">%number</span> Total Monkeys',
+              none: '<span style="color:steelblue; font-size: 26px;">No</span> Monkeys',
             });
           boxND
             .dataProvider(
