--- a/web-src/examples/pareto-chart.html
+++ b/web-src/examples/pareto-chart.html
@@ -4,7 +4,13 @@
     <title>dc.js - Pareto Chart Example</title>
     <link type="text/css" rel="stylesheet" href="../css/dc.css" />
     <link type="text/css" rel="stylesheet" href="../css/dc-floatleft.css" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <script type="text/javascript" src="../js/d3.js"></script>
     <script type="text/javascript" src="../js/crossfilter.js"></script>
     <script type="text/javascript" src="../js/dc.js"></script>
@@ -27,6 +33,7 @@
       <div id="test_composed"></div>
       <div id="pie-chart"></div>
 
+      <script type="text/javascript" src="header.js"></script>
       <script type="text/javascript">
         const chartGroup = new dc.ChartGroup();
         const chart = new dc.CompositeChart('#test_composed', chartGroup),
