--- a/web-src/examples/scatter-svg-large.html
+++ b/web-src/examples/scatter-svg-large.html
@@ -5,7 +5,13 @@
       dc.js - Scatter Plot Brushing Example - Large Dataset, Canvas Backend
     </title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <script type="text/javascript" src="header.js"></script>
     <script type="text/javascript" src="../js/d3.js"></script>
