--- a/web-src/examples/select.html
+++ b/web-src/examples/select.html
@@ -3,7 +3,13 @@
   <head>
     <title>dc.js - Select Menu Example</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <link type="text/css" rel="stylesheet" href="../css/dc-floatleft.css" />
     <style type="text/css">
@@ -34,7 +40,7 @@
           <a
             class="reset"
             href="javascript:select1.filterAll();dc.redrawAll();"
-            style="visibility: hidden;"
+            style="visibility: hidden"
             >reset</a
           >
         </div>
@@ -44,7 +50,7 @@
           <a
             class="reset"
             href="javascript:select2.filterAll();dc.redrawAll();"
-            style="visibility: hidden;"
+            style="visibility: hidden"
             >reset</a
           >
         </div>
@@ -54,12 +60,12 @@
           <a
             class="reset"
             href="javascript:select3.filterAll();dc.redrawAll();"
-            style="visibility: hidden;"
+            style="visibility: hidden"
             >reset</a
           >
         </div>
       </div>
-      <div style="clear: both;"></div>
+      <div style="clear: both"></div>
       <div id="datatable"></div>
 
       <script type="text/javascript" src="header.js"></script>
