--- a/web-src/examples/splom.html
+++ b/web-src/examples/splom.html
@@ -3,7 +3,13 @@
   <head>
     <title>dc.js - Scatter Plot Matrix</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <style>
       html,
@@ -24,7 +30,7 @@
       td.heading {
         position: relative;
       }
-      tr.row:not(.heading) td.heading div {
+      tr.content-row:not(.heading) td.heading div {
         white-space: nowrap;
         position: absolute;
         top: 50%;
@@ -62,13 +68,11 @@
     </style>
   </head>
   <body>
-    <script type="text/javascript" src="header.js"></script>
     <script type="text/javascript" src="../js/d3.js"></script>
     <script type="text/javascript" src="../js/crossfilter.js"></script>
     <script type="text/javascript" src="../js/dc.js"></script>
     <div class="container">
-      <script type="text/javascript" src="./header.js"></script>
-
+      <div id="header"></div>
       <p>
         Scatterplot Matrix Brushing in dc.js. Imitating
         <a href="http://bl.ocks.org/mbostock/4063663">Mike's bl.ock</a>.
@@ -84,6 +88,7 @@
       </p>
       <table id="content"></table>
     </div>
+    <script type="text/javascript" src="header.js"></script>
 
     <script type="text/javascript">
       const chartGroup = new dc.ChartGroup();
@@ -135,7 +140,7 @@
           .data(rows)
           .enter()
           .append('tr')
-          .attr('class', d => (d === 'heading' ? 'heading row' : 'row'))
+          .attr('class', d => (d === 'heading' ? 'heading-row' : 'content-row'))
           .each(function (row, y) {
             d3.select(this)
               .selectAll('td')
