--- a/web-src/examples/stacked-bar.html
+++ b/web-src/examples/stacked-bar.html
@@ -3,7 +3,13 @@
   <head>
     <title>dc.js - Stacked Bar Example</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <style>
       .dc-chart g.chart-body {
@@ -73,9 +79,9 @@
                 {}
               ),
               renderLabel: true,
+              width: 768,
+              height: 480,
             })
-            .width(768)
-            .height(480)
             .x(d3.scaleLinear().domain([1, 21]))
             .margins({ left: 80, top: 20, right: 10, bottom: 20 })
             .legend(new dc.Legend());
