--- a/web-src/examples/switching-time-intervals.html
+++ b/web-src/examples/switching-time-intervals.html
@@ -3,7 +3,13 @@
   <head>
     <title>dc.js - Switching Time Intervals</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <style>
       dl {
@@ -24,10 +30,10 @@
         aggregation over time.
       </p>
       <select id="interval"></select>
-      <span style="font-size: large;" id="counter"></span
-      ><span id="counter-text" style="display: none;"> selected.</span>
+      <span style="font-size: large" id="counter"></span
+      ><span id="counter-text" style="display: none"> selected.</span>
       <br />
-      <div id="test" style="min-height: 500px;"></div>
+      <div id="test" style="min-height: 500px"></div>
 
       <script type="text/javascript" src="header.js"></script>
       <script type="text/javascript" src="../js/d3.js"></script>
