--- a/web-src/examples/table-pagination.html
+++ b/web-src/examples/table-pagination.html
@@ -3,7 +3,13 @@
   <head>
     <title>dc.js - Table Pagination Example</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
   </head>
   <body>
@@ -13,7 +19,7 @@
       <div class="row">
         <div id="piechart">
           <h4>Expt:</h4>
-          <div class="reset" style="visibility: hidden;">
+          <div class="reset" style="visibility: hidden">
             selected: <span class="filter"></span>
             <a href="javascript:piechart.filterAll();dc.redrawAll();">reset</a>
           </div>
