--- a/web-src/examples/time-intervals.html
+++ b/web-src/examples/time-intervals.html
@@ -3,7 +3,13 @@
   <head>
     <title>dc.js - Time Intervals Example</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <link type="text/css" rel="stylesheet" href="../css/dc-floatleft.css" />
   </head>
@@ -27,13 +33,13 @@
       </p>
 
       <div id="month">
-        <div class="reset" style="visibility: hidden;">
+        <div class="reset" style="visibility: hidden">
           selected: <span class="filter"></span>
           <a href="javascript:monthChart.filterAll();dc.redrawAll();">reset</a>
         </div>
       </div>
       <div id="cost">
-        <div class="reset" style="visibility: hidden;">
+        <div class="reset" style="visibility: hidden">
           selected: <span class="filter"></span>
           <a href="javascript:costChart.filterAll();dc.redrawAll();">reset</a>
         </div>
